--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,121 @@
   align-items: center;
   list-style: none;
 }
+
+.main{
+  color: aliceblue;
+  background-image: url(./image/georgios-kaleadis-abtftmsocoi-unsplash-min_optimized.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 1%;
+}
+  
+.content-information{
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #00000081;
+}
+
+.content-perfil{
+  margin-bottom: 15rem;
+  width: 60%;
+  padding: 0 2rem;
+}
+
+.my-name{
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.contenedor-rol{
+  display: table;
+}
+
+.my-rol{
+  margin-top: 0.5rem;
+  width: 100%;
+  font-size: 1.3rem;
+  font-weight: 200;
+  letter-spacing: 5px;
+  position: relative;
+}
+
+.span-maquina{
+  position: absolute;
+  right: 0;
+  width: 0;
+  background-color: #202020;
+  border-left: 1px solid #fff;
+  animation: maquina 5s infinite alternate steps(20);
+}
+
+@keyframes maquina {
+  from{
+    width: 0;
+  }
+  to{
+    width: 100%;
+  }
+  
+}
+
+
+.content-img-and-networks{
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.my-photo{
+  margin-top: 3rem;
+  height: 400px;
+  width: 400px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.content-networks{
+  width: 100%;
+}
+
+.title-networks{
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+/* SECTION TOOLS  */
+
+.content-tools{
+  background-color: #000;
+  padding: 2rem 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.title-tools{
+  width: 60%;
+  margin: auto;
+  padding: 1rem;
+  font-size: 1.7rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #ddd;
+}
+
+.tools{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-basis: 1 1 ;
+}
