--- a/src/App.css
+++ b/src/App.css
@@ -76,18 +76,19 @@
 .span-maquina{
   position: absolute;
   right: 0;
-  width: 0;
+  height: 100%;
+  width: 1px;
   background-color: #202020;
   border-left: 1px solid #fff;
-  animation: maquina 5s infinite alternate steps(20);
+  animation: maquina 0.8s infinite running;
 }
 
 @keyframes maquina {
   from{
-    width: 0;
+    border: none;
   }
   to{
-    width: 100%;
+    border-left: 1px solid #fff;
   }
   
 }
@@ -123,8 +124,7 @@
 /* SECTION TOOLS  */
 
 .content-tools{
-  background-color: #000;
-  padding: 2rem 1rem;
+  background-color: #080808;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -139,12 +139,254 @@
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 2rem;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #fff;
 }
 
 .tools{
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  flex-basis: 1 1 ;
+  padding: 1rem 0;
+}
+
+/* SECCION SOBRE MI  */
+
+
+.content-sobre-mi{
+  width: 100%;
+  background-color: #000000ea;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-info-about{
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.presentacion{
+  display: flex;
+  padding: 1rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+
+.jupiter{
+  width: 300px;
+  height: 300px;
+  margin-bottom: 3rem;
+  border-radius: 50%;
+  background-image: url(./image/jupiter.png);
+  background-size: cover;
+  box-shadow: inset 0px 0px 20px #000,
+              inset -40px -10px 20px rgba(56, 48, 3, 0.5);
+  animation: jupiter 10s linear infinite;
+}
+
+@keyframes jupiter {
+  0%{
+    background-position-x: 0;
+  }
+  100%{
+    background-position-x: -690px;
+  }
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 2rem 0;
+  overflow: hidden;
+  height: 3rem;
+  background-size: 300% 300%;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+  transition: 0.5s;
+  animation: gradient_301 5s ease infinite;
+  border: double 2px transparent;
+  background-image: linear-gradient(#212121, #212121), linear-gradient(137.48deg, #740808 10%, #c91b1b 45%, #740808 67%, #d32b2b 87%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+#container-stars {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transition: 0.5s;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+}
+
+strong {
+  z-index: 2;
+  font-family: 'Poppins' sans-serif;
+  font-size: 16px;
+  letter-spacing: 3px;
+  color: #FFFFFF;
+  text-shadow: 0 0 4px rgb(0, 0, 0);
+}
+
+#glow {
+  position: absolute;
+  display: flex;
+  width: 12rem;
+}
+
+.circle {
+  width: 100%;
+  height: 30px;
+  filter: blur(2rem);
+  animation: pulse_3011 4s infinite;
+  z-index: -1;
+}
+
+.circle:nth-of-type(1) {
+  background: rgba(0, 0, 1860 0.936);
+}
+
+.circle:nth-of-type(2) {
+  background: rgba(0, 0, 1860 0.936);
+}
+
+.btn:hover #container-stars {
+  z-index: 1;
+  background-color: #212121;
+}
+
+.btn:hover {
+  transform: scale(1.1)
+}
+
+.btn:active {
+  border: double 4px #ffffff;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  animation: none;
+}
+
+.btn:active .circle {
+  background: #ffffff;
+}
+
+#stars {
+  position: relative;
+  background: transparent;
+  width: 200rem;
+  height: 200rem;
+}
+
+#stars::after {
+  content: "";
+  position: absolute;
+  top: -10rem;
+  left: -100rem;
+  width: 100%;
+  height: 100%;
+  animation: animStarRotate 90s linear infinite;
+}
+
+#stars::after {
+  background-image: radial-gradient(#ffffff 1px, transparent 1%);
+  background-size: 50px 50px;
+}
+
+#stars::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 170%;
+  height: 500%;
+  animation: animStar 60s linear infinite;
+}
+
+#stars::before {
+  background-image: radial-gradient(#ffffff 1px, transparent 1%);
+  background-size: 50px 50px;
+  opacity: 0.5;
+}
+
+@keyframes animStar {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-135rem);
+  }
+}
+
+@keyframes animStarRotate {
+  from {
+    transform: rotate(360deg);
+  }
+
+  to {
+    transform: rotate(0);
+  }
+}
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes pulse_3011 {
+  0% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+
+
+.description-me{
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.content-education{
+  width: 50%;
+  padding: 1rem;
+}
+
+.education-title{
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding: 1rem 0;
+}
+
+.target-education{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
