--- a/src/style/logoTool.css
+++ b/src/style/logoTool.css
@@ -1,11 +1,11 @@
 .content-logoTool{
-    width: 100px;
-    height: 100px;
+    padding: 0.5rem;
+    width: 130px;
+    height: 130px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 2rem;
 }
 
 .name-of-logo{
@@ -16,7 +16,6 @@
 
 .logoTools{
     margin-top: 1rem;
-    width: 100%;
-    height: 100%;
-    /* flex: 1 1; */
+    width: auto;
+    height: 70%;
 }
