--- a/src/style/buttonNav.css
+++ b/src/style/buttonNav.css
@@ -14,3 +14,16 @@
     border-bottom: 1px solid #fff;
     /* box-shadow: 1px 1px 10px 10px #fff; */
 }
+
+@media (max-width: 767px){
+    .linkNav{
+        display: none;
+    }
+
+    .buttonNav{
+      margin: 0;
+      width: 72px;
+      height: 100%;
+      font-size: 24px;
+    }
+}
