--- a/src/style/cardProject.css
+++ b/src/style/cardProject.css
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    text-align: start;
 }
 
   
@@ -69,20 +69,25 @@
 }
 
 @media (max-width: 767px) {
+    .cards{
+        padding: 0;
+    }
+    
     .card{
-        height: 200px;
-        width: 130px;
+        height: 216px;
+        width: 160px;
     }
 
     .content-info-project-two{
-        padding: .5rem;
-        height: 30%;
+        padding: .3rem;
+        height: 40%;
+        text-align: start;
     }
     .title-project{
-        font-size: .6rem;
+        font-size: .8rem;
     }
 
     .date-project{
-        font-size: .4rem;
+        font-size: .7rem;
     }
 }
